# trading

./: .env.example  .gitignore  AGENTS.md  Dockerfile  compose.monitoring.yaml  compose.prod.yaml  compose.staging.yaml  compose.staging.yaml.bak  compose.yaml  docker-compose.monitoring.yml  docker-compose.yml  docker-compose.yml.old  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.kimi/: agent.yaml  mcp.json  system.md
.kimi/skills/: trigger-eval.md
.kimi/subagents/: architect.md  architect.yaml  cleanup.md  cleanup.yaml  dev-tester.md  dev-tester.yaml  developer.md  developer.yaml  po.md  po.yaml  qa-integration.md  qa-integration.yaml  qa-manual.md  qa-manual.yaml  qa-metrics.md  qa-metrics.yaml  qa-security.md  qa-security.yaml  qa.md  qa.yaml  reviewer.md  reviewer.yaml
data/: crypto_2y_ohlcv.csv  trading.db.bak
docs/: README.md  deep-research-report-histo-data.md  deep-research-report-models.md  deep-research-report-training.md
models/: crypto_ninja_H10_th0.05.pkl  crypto_ninja_H5_th0.03.pkl  crypto_ninja_H5_th0.05.pkl
scripts/: dev_manager.sh  export_sentiment_dataset.py  init_db.py  init_docker.py  migrate_sqlite_to_postgres.py  prefect_serve.py  run_api.py  run_listener.py  run_mcp_server.py  run_pipeline.py  start_prefect.sh  start_prefect_server.py  test_e2e.py  test_monitoring_e2e.py  test_token_tracking.py  train_fusion_model.py  validate_sentiment_labels.py
sql/: schema.sql
src/models/: signal_staging-ninja_H2_th0.03_walkforward.metrics.json  signal_staging-ninja_H2_th0.03_walkforward.pkl  signal_staging-ninja_H5_th0.03_walkforward.metrics.json  signal_staging-ninja_H5_th0.03_walkforward.pkl  signal_staging-rotation_H5_th0.03_walkforward.metrics.json  signal_staging-rotation_H5_th0.03_walkforward.pkl  signal_staging-simulation_H5_th0.03.metrics.json  signal_staging-simulation_H5_th0.03.pkl  signal_staging-simulation_H5_th0.03_walkforward.metrics.json  signal_staging-simulation_H5_th0.03_walkforward.pkl
src/scripts/: analyze_crypto_backtest.py  grid_search_stocks.py  ingest_crypto_binance.py  ingest_fear_greed.py  ingest_funding_rates.py  ingest_historical.py  ingest_macro.py  leverage_grid_search.py  test_crypto_drawdown.py  test_crypto_enriched.py  test_crypto_largecap.py  test_crypto_no_uni.py  test_crypto_position_sizing.py  test_crypto_regression.py  test_crypto_regression_fixed.py  test_crypto_risk_mgmt.py  test_ninja_momentum.py  test_stocks_regression.py  train_crypto_model.py  train_ninja_momentum.py  validate_ninja_momentum.py
src/trading/: __init__.py
tests/: __init__.py  conftest.py
(+97 files in other folders)
