[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-engine"
version = "1.0.0"
description = "Système de trading modulaire - Event-driven + API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "prefect>=3.0",
    "transformers>=4.40",
    "torch>=2.3",
    "accelerate>=0.30",
    "schedule>=1.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "scikit-learn>=1.8.0",
    "bitsandbytes>=0.49.2",
    "pandas>=2.0",
    "xgboost>=2.0",
    "yfinance>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: tests unitaires rapides (défaut)",
    "integration: tests d'intégration avec DB",
    "e2e: tests end-to-end complets",
    "slow: tests lents (ex: entraînement ML)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
